# syn2midi

./: .gitignore  CMakeLists.txt
syn2midi/: buffer.h  midi.cpp  processing.h  video.h
